# tools

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  install_nw_python_tools.bat  install_nw_python_tools.ps1  pyproject.toml  windows_maintenance_toolkit_project_reference.md
fdt/: README.md  pyproject.toml
fdt/src/fdt/: __init__.py  cli.py  cli_file.py  cli_folder.py  dupes.py  empty.py  options.py  purge.py  report.py  results.py  sizes.py  walk.py
fdt/tests/: conftest.py  test_empty.py  test_purge.py  test_sizes_and_dupes.py  treebuild.py
git-sync/: README.md  pyproject.toml
git-sync/src/git_sync/: __init__.py  cli.py  repo.py  report.py  scanner.py
git-sync/tests/: conftest.py  test_sync.py
git-tools/: README.md  pyproject.toml
git-tools/src/git_tools/: __init__.py  clean.py  cli.py  cli_hub.py  gitcmd.py  gitconfig.py  github.py  repo.py  report.py
git-tools/tests/: test_clean.py  test_config_and_hub.py  test_modes.py  test_reconcile.py  test_sync.py
pdf-scrub/: pyproject.toml
pdf-scrub/src/pdf_scrub/: __init__.py  cli.py  scrub.py
pdf-scrub/tests/: test_scrub.py
windows/: README.md
windows/jupyter/: README.md  list-kernel-ipykernel-versions.ps1
windows/powershell/: README.md  export_module_inventory.ps1  update_all.bat  update_help.ps1  update_modules.ps1  update_powershell.ps1
windows/remote-dev/: README.md  check_remote_dev.bat  check_remote_dev.ps1  guide-ssh-tailscale-tmux.md  guide-vscode-remote-tunnels.md  setup_remote_dev.bat  setup_remote_dev.ps1
windows/shell-launchers/: README.md  open_cmd_here.bat  open_git_bash_here.bat  open_git_bash_venv_here.bat  open_powershell_here.bat
