[project]
name = "fdt"
version = "0.1.0"
description = "File and directory housekeeping: clean-empty, size, find-dupes, find-large"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24",
    "typer>=0.12",
]

[project.scripts]
fdt = "fdt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdt"]
