[project]
name = "git-sync"
version = "0.1.0"
description = "Sync all git repositories under a folder: fetch, fast-forward pull, and push clean repos"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24",
    "typer>=0.12",
]

[project.scripts]
git-sync = "git_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_sync"]
