[project]
name = "git-tools"
version = "3.1.0"
description = "Git housekeeping across many repos at once: sync-all, reconcile-all, pull-all, push-all, clean-all, plus GitHub `hub` commands"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "structlog>=24",
    "typer>=0.12",
]

[project.scripts]
git-tools = "git_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_tools"]
