[project]
name = "pdf-scrub"
version = "0.1.0"
description = "Strip mailto link annotations and watermarks from PDFs"
requires-python = ">=3.12"
dependencies = [
    "pikepdf>=9.0",
    "typer>=0.12",
]

[project.scripts]
pdf-scrub = "pdf_scrub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_scrub"]
